Fixed H2 alignement

--- a/style.css
+++ b/style.css
@@ -59,7 +59,10 @@ body {
 
 h1,
 h2,
-h3,
+h3
+{
+	font-family: "Space Grotesk", sans-serif;
+}
 
 /* ========================================= */
 /* LOGO */
